fixed double overflow bug

--- a/src/pybind/mgr/dashboard/frontend/src/app/core/navigation/navigation/navigation.component.scss
+++ b/src/pybind/mgr/dashboard/frontend/src/app/core/navigation/navigation/navigation.component.scss
@@ -6,6 +6,7 @@
 
 .cd-navbar-main {
   height: 100%;
+  overflow: hidden;
 }
 
 /* ---------------------------------------------------
